--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "globals": "^15.15.0",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-react": "^0.475.0",
+        "motion": "^12.23.12",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwind-merge": "^3.3.1",
