--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,10 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://alshekh.com.test
+APP_PORT=7080
+SSR_URL=http://127.0.0.1
+SSR_PORT=13714
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
