--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -36,8 +36,8 @@ stderr_logfile=/var/log/php-fpm-stderr.log
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
-directory=/app
+command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+directory=/var/www/html
 autostart=true
 autorestart=true
 stopasgroup=true
@@ -48,8 +48,8 @@ stdout_logfile=/var/log/laravel-worker.log
 stopwaitsecs=3600
 
 [program:inertia-ssr]
-command=php /app/artisan inertia:start-ssr
-directory=/app
+command=php /var/www/html/artisan inertia:start-ssr
+directory=/var/www/html
 autostart=true
 autorestart=true
 redirect_stderr=true
