--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,8 +1,7 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 8000;
     server_name localhost;
-    root /app/public;
+    root /var/www/html/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
