--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,22 +1,25 @@
 [unix_http_server]
-file=/tmp/supervisor.sock
+file=/var/run/supervisor/supervisor.sock
+chmod=0700
+chown=root:root
 
 [supervisord]
 logfile=/var/log/supervisord.log
 logfile_maxbytes=50MB
 logfile_backups=10
 loglevel=info
-pidfile=/tmp/supervisord.pid
+pidfile=/var/run/supervisor/supervisord.pid
 nodaemon=true
 silent=false
 minfds=1024
 minprocs=200
+user=root
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisor.sock
+serverurl=unix:///var/run/supervisor/supervisor.sock
 
 [program:nginx]
 command=nginx -g "daemon off;"
