--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.2.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
-        "typescript-eslint": "^8.39.1"
+        "typescript-eslint": "^8.39.1",
+        "vite-tsconfig-paths": "^5.1.4"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.7",
