--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "tailwindcss": "^4.1.11",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.9.2",
+        "vaul": "^1.1.2",
         "vite": "^7.1.2"
     },
     "optionalDependencies": {
