--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
         "laravel-vite-plugin": "^2.0.0",
         "lucide-react": "^0.475.0",
         "motion": "^12.23.12",
+        "next-themes": "^0.4.6",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
         "tailwindcss-animate": "^1.0.7",
